HTTP Honeypot logging

--- a/login.html
+++ b/login.html
@@ -508,7 +508,7 @@
 			<div id="scroller">
 				<div class="scrollbar edit" id="style-7">
 					<div class="force-overflow edit">
-						<form  action="http://localhost:8080/home/" method="POST" class="form-horizontal" role="form" style="font-family: 'Alegreya', serif; font-weight: 100;">
+						<form  action="http://localhost:8080/login/" method="POST" class="form-horizontal" role="form" style="font-family: 'Alegreya', serif; font-weight: 100;">
 
 
 							<div class="col-md-9 personal-info">
